Closed Bug 1521310 Opened 7 years ago Closed 7 years ago

Titlebar window control placement on left despite Ubuntu 18.10 setting specifying the right

Categories

(Core :: Widget: Gtk, defect)

66 Branch
Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox-esr60 --- unaffected
firefox64 --- unaffected
firefox65 --- unaffected
firefox66 --- fixed

People

(Reporter: ke5trel, Assigned: stransky)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image reversed-placement.png

Ubuntu 18.10 Tweaks app indicates titlebar window controls placement is "Right" but actual placement is on left.

Workaround is to create about:config integer setting ui.GtkCSDReversedPlacement = 0 and restart.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=529a105310435244ef67c078a810ad92b22d9327&tochange=7d151a27de64cce8b0ed96443c1888656341e420

Regressed by: Bug 1433667

Assignee: nobody → stransky

Hm, I'm unable to reproduce on clean Ubuntu 18.10 installation, the buttons are on correct side and changes according the Tweaks app. Perhaps I miss something.

This is caused by appmenu in the button-layout which is added by Tweaks -> Top Bar -> Application Menu -> OFF which persists even after turning it back ON.

org.gnome.desktop.wm.preferences button-layout
Default: ':minimize,maximize,close'
Breaks placement: 'appmenu:minimize,maximize,close'
Also breaks placement: ':appmenu,minimize,maximize,close'

Depends on: 1519606

Thanks a lot!

Use only ':' separator instead of 'menu:' to place titlebar buttons as the menu may not be always present.

Pushed by apavel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c4ef82395d7c
[Linux/Gtk] Use ':' separator to place titlebar buttons left/right, r=dao

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: