Bug 1521310 - [Linux/Gtk] Use ':' separator to place titlebar buttons left/right, r=dao

Use only ':' separator instead of 'menu:' to place titlebar buttons as the menu may not be always present.

Differential Revision: https://phabricator.services.mozilla.com/D17480

--HG--
extra : moz-landing-system : lando